--- a/templates/_include/_partial/_social.html
+++ b/templates/_include/_partial/_social.html
@@ -1,9 +1,6 @@
 <a href="https://www.facebook.com/vima.tech.web.solutions/?ref=ts&fref=ts" title="Pagina Facebook" target="_blank">
         <i class="fa fa-facebook"></i>                                                                                                                                                   
 </a>
-<a href="#" title="Pagina Twitter">
-        <i class="fa fa-twitter"></i>                                                                                                                                                   
-</a>
-<a href="#" title="Pagina Instagram">
-        <i class="fa fa-instagram"></i>                                                                                                                                                   
+<a href="https://www.youtube.com/channel/UC7SaLzQQgNFpqsp4UWlu6Rw" title="Pagina Youtube">
+        <i class="fa fa-youtube-play"></i>                                                                                                                                                   
 </a>
