--- a/templates/index.html
+++ b/templates/index.html
@@ -10,38 +10,60 @@
 	                        <h1>{{ contenuto.titolo_home}}</h1>
 	                        {% endif %}            
 	                        {% if contenuto.sottotitolo_home %}   
-	                        <p class="sottotit">{{contenuto.sottotitolo_home}}</p>
-	                        {% endif %}     
-	                        {% if contenuto.testo_home %}   
-                                <p>{{contenuto.testo_home}}</p>
-                                {% endif %}    
+				<p class="sottotit">{{contenuto.sottotitolo_home}}</p>
+				{% endif %}   
 	                        <div class="row">
-	                        {% if contenuto.immagine_box_1 %}
-	                               <div class="col-sm-3">
-	                                       <img src="{{contenuto.immagine_box_1.url}}"/>        
-	                               </div>                                           
-	                        {% endif %}                                                                                           
-	                        {% if contenuto.immagine_box_2 %}
-	                               <div class="col-sm-3">
-	                                       <img src="{{contenuto.immagine_box_2.url}}"/> 
-	                               </div>  
-	                         {% endif %}
-	                        {% if contenuto.immagine_box_3 %}
-	                               <div class="col-sm-3">
-	                                         <img src="{{contenuto.immagine_box_3.url}}"/> 
-	                                 </div>  
-	                         {% endif %}
-	                        {% if contenuto.immagine_box_4 %}
-	                                 <div class="col-sm-3">
-	                                         <img src="{{contenuto.immagine_box_4.url}}"/>
-	                                 </div>   
-	                         {% endif %}
-	                         </div>
-	                         {% if contenuto.sottotesto_home %}   
-                                 <p class="sottotesto">{{contenuto.sottotesto_home}}</p>
-                                 {% endif %}    
+	                               <div class="col-sm-8 col-sm-offset-4">	 			                          
+			                        {% if contenuto.testo_home %}   
+		                                <p>{{contenuto.testo_home}}</p>
+		                                {% endif %}    
+	                                </div>
+                                 </div>
+                                 <div class="row">
+                                        <div class="col-sm-2 col-sm-offset-1 pd-lr-2">
+                                                <div class="box-servizi">
+                                                        <span class="fa fa-4x fa-pencil"></span>
+                                                        <p>Web Design</p>
+                                                </div>
+                                        </div>
+                                        <div class="col-sm-2 pd-lr-2">
+                                                <div class="box-servizi">
+                                                        <span class="fa fa-4x fa-wrench"></span>
+                                                        <p>Web Programming</p>
+                                                </div>
+                                        </div>
+                                        <div class="col-sm-2 pd-lr-2">
+                                                <div class="box-servizi">
+                                                        <span class="fa fa-4x fa-line-chart"></span>
+                                                        <p>SEO</p>
+                                                </div>
+                                        </div>
+                                        <div class="col-sm-2 pd-lr-2">
+                                                <div class="box-servizi">
+                                                        <span class="fa fa-4x fa-plug"></span>
+                                                        <p>Arduino</p>
+                                                </div>
+                                        </div>
+                                        <div class="col-sm-2 pd-lr-2">
+                                                <div class="box-servizi">
+                                                        <span class="fa fa-4x fa-graduation-cap"></span>
+                                                        <p>Consulenze</p>
+                                                </div>
+                                        </div>
+                                 </div>
+                                <div class="row">
+                                       <div class="col-sm-8 col-sm-offset-4">			                        
+			                         {% if contenuto.sottotesto_home %}   
+		                                 <p class="sottotesto">{{contenuto.sottotesto_home}}</p>
+		                                 {% endif %}    
+	                                 </div>
+                                 </div>
 	                </div>          
 	        </div>                
         </div>
 	
 {% endblock %}
+
+
+
+
