--- a/templates/work.html
+++ b/templates/work.html
@@ -4,22 +4,22 @@
 
 {% block content %}
 <div id="work">
-        <div class="container">
-                <div class="row">
-                        {% if work %}                                
-                                {% for elem in work %}
-	                              <div class="col-sm-3">
-	                                       <div class="screen">
-	                                               {% if elem.screen %}
-	                                               <img class="img-screen" src="{{elem.screen.url}}" alt="Immagine del progetto">
-	                                               {% endif %}
-	                                               <div class={% if elem.titolo_work %}"visible"{% else %}"hidden"{% endif %}>{{elem.titolo_work}}</div>
-	                                       </div>
-	                                       {{elem.descrizione_work}}
-	                              </div>  
-                                {% endfor %}
-                        {% endif %}
-               </div>
+        <div class="container">                
+	        {% if work %}                        
+	                {% for elem in work %}	
+	                       <div class="box-work">      
+		                        <div class="screen">
+		                              <a href={% if elem.link %}"{{ elem.link }}"  target="_blank"{% else %}"#"{% endif %}>
+		                                {% if elem.screen %}
+		                                <img class="img-screen" src="{{elem.screen.url}}" alt="Immagine del progetto">
+		                                {% endif %}
+		                                </a>
+		                                <div class={% if elem.titolo_work %}"visible tit-work"{% else %}"hidden"{% endif %}>{{elem.titolo_work}}</div>
+		                        </div>
+		                        {{elem.descrizione_work}}	
+	                        </div>                    
+	                {% endfor %}	               
+	        {% endif %}               
         </div>
 </div>
                                          
