--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,7 +222,7 @@ ul.menu-footer > li.active{
         float:left;
         margin: 1%;
 }
-.box-work:nth-of-type(2) {
+.box-work:nth-of-type(odd) {
     float: right;
 }
 .tit-work{
