--- a/templates/work.html
+++ b/templates/work.html
@@ -7,7 +7,7 @@
         <div class="container">                
 	        {% if work %}                        
 	                {% for elem in work %}	
-	                       <div class="box-work">      
+	                       <div class="box-work animated pulse">      
 		                        <div class="screen">
 		                              <a href={% if elem.link %}"{{ elem.link }}"  target="_blank"{% else %}"#"{% endif %}>
 		                                {% if elem.screen %}
