--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 		<link href="{% static "css/bootstrap-responsive.min.css" %}" rel="stylesheet">
 		<link href="{% static "css/bootstrap-theme.min.css" %}" rel="stylesheet">
 		<link href="{% static "css/bootstrap.css.map" %}" rel="stylesheet">
+		<link href="{% static "css/animate.css" %}" rel="stylesheet">
 		<link href="{% static "css/style.css" %}" rel="stylesheet">
 		
 		<!-- Font  -->
@@ -50,7 +51,11 @@
 		</div>
 		
 		{% include "_include/_footer.html" %}
-
+		
+		
+		
+		
+                
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script type="text/javascript" src="{% static "js/jquery-1.7.min.js" %}"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
