--- a/templates/index.html
+++ b/templates/index.html
@@ -21,31 +21,31 @@
                                  </div>
                                  <div class="row">
                                         <div class="col-sm-2 col-sm-offset-1 pd-lr-2">
-                                                <div class="box-servizi">
+                                                <div class="box-servizi animated slideInRight">
                                                         <span class="fa fa-4x fa-pencil"></span>
                                                         <p>Web Design</p>
                                                 </div>
                                         </div>
                                         <div class="col-sm-2 pd-lr-2">
-                                                <div class="box-servizi">
+                                                <div class="box-servizi animated slideInLeft">
                                                         <span class="fa fa-4x fa-wrench"></span>
                                                         <p>Web Programming</p>
                                                 </div>
                                         </div>
                                         <div class="col-sm-2 pd-lr-2">
-                                                <div class="box-servizi">
+                                                <div class="box-servizi animated slideInRight">
                                                         <span class="fa fa-4x fa-line-chart"></span>
                                                         <p>SEO</p>
                                                 </div>
                                         </div>
                                         <div class="col-sm-2 pd-lr-2">
-                                                <div class="box-servizi">
+                                                <div class="box-servizi animated slideInLeft">
                                                         <span class="fa fa-4x fa-plug"></span>
                                                         <p>Arduino</p>
                                                 </div>
                                         </div>
                                         <div class="col-sm-2 pd-lr-2">
-                                                <div class="box-servizi">
+                                                <div class="box-servizi animated slideInRight">
                                                         <span class="fa fa-4x fa-graduation-cap"></span>
                                                         <p>Consulenze</p>
                                                 </div>
