--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,20 @@
 {% load i18n %}
 {% load static %}
 
+{% block title %}Contact - Vima-tech{% endblock %}
+
+{% block opengraph %}                 
+        <meta property="og:url" content="{{request.build_absolute_uri}}" />     
+        <meta property="og:site_name" content="Vima-tech" />
+        <meta property="og:locale" content="it_IT" />
+        <meta property="og:title" content="Contatti" />
+        <meta property="og:description" content="via Olmo di Riccio, 58. 66034 Lanciano (CH)" />
+        <meta property="og:image" content="{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{% static "img/logo.png" %}" />
+{% endblock %}
+        
+{% block meta_description %}Sede e Contatti Vima{% endblock %}
+{% block meta_keywords %}Telefono, email, mappa, localizzazione{% endblock %}
+
 {% block content %}
 <div id="contatti">
          <div class="container m-t-40">
@@ -17,35 +31,35 @@
                                  </div>
                                  
                                  <p class="text-right">Scrivici:</p>
-                                 <div class="footer-content" data-animation-effect="fadeInRightSmall" data-effect-delay="300">
-                                        <div class="alert alert-success hidden" id="MessageSent2">
-                                                 Abbiamo ricevuto il suo messaggio, la ricontattremo presto.
-                                        </div>
-                                        <div class="alert alert-danger hidden" id="MessageNotSent2">
-                                                 Oops! Qualcosa è andato storto, per favore aggiornare la pagina e riprovare.
-                                        </div>
-                                        <form action="send.php" role="form" id="footer-form">
-                                                 <div class="form-group has-feedback">
-                                                        <label class="sr-only" for="name2">Nome</label>
-                                                        <input type="text" class="form-control" id="name2" placeholder="Nome" name="name2">
-                                                        <i class="fa fa-user form-control-feedback"></i>
-                                                </div>
-                                                <div class="form-group has-feedback">
-                                                       <label class="sr-only" for="email2">Indirizzo Email</label>
-                                                       <input type="email" class="form-control" id="email2" placeholder="Email" name="email2">
-	                                               <i class="fa fa-envelope form-control-feedback"></i>
-                                                </div>
-                                                <div class="form-group has-feedback">
-                                                        <label class="sr-only" for="message2">Messaggio</label>
-                                                        <textarea class="form-control" rows="4" id="message2" placeholder="Messaggio" name="message2"></textarea>
-                                                        <i class="fa fa-pencil form-control-feedback"></i>
-                                                </div>
-                                                <div class="col-md-2 col-md-offset-10">
-                                                        <input type="submit" value="Invia" class="submit-button btn btn-default">
-                                                </div>
-                                        </form>
-                                 </div>
-                         </div>
+                                 {% if messages %}
+				        {% for message in messages %}
+				        <div {% if message.tags %} class="messaggio messaggio-{{ message.tags }}"{% endif %} >{{ message|safe }}</div>
+				        {% endfor %}
+				{% endif %}
+                                                
+                                <div class="input-group">
+                                        <form action="." method="POST" id="fcontatti">
+                                                {% csrf_token %}
+                                                <input type="text" name="nome" required class="form-control" placeholder="{% trans "nome *" %}" aria-describedby="basic-addon1">
+                                                <input type="text" name="ragione-sociale" class="form-control" placeholder="{% trans "ragione sociale" %}" aria-describedby="basic-addon4">
+                                                <input type="email" name="email"  required  class="form-control" placeholder="{% trans "e-mail *" %}" aria-describedby="basic-addon2">                                                
+                                                <textarea class="form-control" required name="messaggio" placeholder="{% trans "scrivi il tuo messaggio... *" %}" rows="4" id="comment"></textarea>
+                                                <div class="pad-t-20 text-right"><small>* {% trans "campi obbligatori" %}</small></div>
+                                                <div class="row under-input">
+                                                        <div class="col-xs-1 col-xs-offset-1 m-t-25"><input required type="checkbox"></div>
+                                                        <div class="col-xs-10 m-t-25">                                                                 
+	                                                        <span>{% trans "Dichiaro di aver letto ed accettato l'informativa sulla" %} 
+	                                                                <a href="{% url 'privacy' %}" class="privacy" title="Privacy">{% trans "privacy" %} *</a>
+	                                                        </span>                                                                 
+                                                        </div>
+                                                        <div class="col-xs-12 mg-t-40 text-right">
+                                                                 <button  type="submit" class="btn-invia-contatti text-right">{% trans "INVIA" %}</button>
+                                                        </div>                                                          
+                                                </div>          
+                                        </form>                                 
+                                    </div>                                    
+                                    <div class="visible-xs" style="height:200px"></div>
+                          </div>      
                          <div class="col-md-5 col-md-offset-2">
                                  <div id="google-map">
                                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2953.908209522401!2d14.39202431573886!3d42.23777395080747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1330fdc451199917%3A0x799e1694a9c8b65b!2sVima+Di+Vittorio+Lupinetti+%26+C.+Sas!5e0!3m2!1sit!2sit!4v1494563176605" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
