--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,6 +292,10 @@ ul.menu-footer > li.active{
 	margin-bottom: 8px;
 	font-size: 18px;
 }
+.form-control{
+	box-shadow: none!important;
+	border: 1px solid #123456!important;
+}
 #privacy{
 	color: #fff;
 }
