--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,53 +18,34 @@
 
 {% block content %}
 <div id="contatti">
-         <div class="container m-t-40">
-                 <div class="row">
-                         <div class="col-md-5">
-                                 <div class="tit">
-                                         Contatti
-                                 </div>
-                                 <div class="text">
-                                 Vima s.a.s. di Vittorio Lupinetti & C<br>
-                                 66034 Lanciano (Ch) <br>
-                                 mail: info@vima-tech.it
-                                 </div>
-                                 
-                                 <p class="text-right">Scrivici:</p>
-                                 {% if messages %}
-				        {% for message in messages %}
-				        <div {% if message.tags %} class="messaggio messaggio-{{ message.tags }}"{% endif %} >{{ message|safe }}</div>
-				        {% endfor %}
-				{% endif %}
-                                                
-                                <div class="input-group">
-                                        <form action="." method="POST" id="fcontatti">
-                                                {% csrf_token %}
-                                                <input type="text" name="nome" required class="form-control" placeholder="{% trans "nome *" %}" aria-describedby="basic-addon1">
-                                                <input type="text" name="ragione-sociale" class="form-control" placeholder="{% trans "ragione sociale" %}" aria-describedby="basic-addon4">
-                                                <input type="email" name="email"  required  class="form-control" placeholder="{% trans "e-mail *" %}" aria-describedby="basic-addon2">                                                
-                                                <textarea class="form-control" required name="messaggio" placeholder="{% trans "scrivi il tuo messaggio... *" %}" rows="4" id="comment"></textarea>
-                                                <div class="pad-t-20 text-right"><small>* {% trans "campi obbligatori" %}</small></div>
-                                                <div class="row under-input">
-                                                        <div class="col-xs-1 col-xs-offset-1 m-t-25"><input required type="checkbox"></div>
-                                                        <div class="col-xs-10 m-t-25">                                                                 
-	                                                        <span>{% trans "Dichiaro di aver letto ed accettato l'informativa sulla" %} 
-	                                                                <a href="{% url 'privacy' %}" class="privacy" title="Privacy">{% trans "privacy" %} *</a>
-	                                                        </span>                                                                 
-                                                        </div>
-                                                        <div class="col-xs-12 mg-t-40 text-right">
-                                                                 <button  type="submit" class="btn-invia-contatti text-right">{% trans "INVIA" %}</button>
-                                                        </div>                                                          
-                                                </div>          
-                                        </form>                                 
-                                    </div>                                    
-                                    <div class="visible-xs" style="height:200px"></div>
-                          </div>      
-                         <div class="col-md-5 col-md-offset-2">
-                                 <div id="google-map">
+        <div class="container m-t-40">
+                <div class="row">
+                        <div class="col-md-5">
+                                <div class="tit">Contatti</div>
+                                <div class="text">
+                                        <p>{{contact.nome_azienda}}</p>
+                                        <p>{{contact.indirizzo_azienda}}, <span>{{contact.civico_azienda}}</span></p>
+                                        <p>{{contact.cap}}<span>{{contact.comune}}</span>(<span>{{contact.provincia}}</span>)</p>
+                                        <p>Tel: {{contact.tel}}</p>
+                                        <p>Mail: {{contact.email}}</p>
+                                </div>                                
+                                <p class="text-right">Scrivici:</p>				
+                                <div class="col-xs-1 col-xs-offset-1 m-t-25"><input required type="checkbox"></div>
+                                <div class="col-xs-10 m-t-25">                              
+                                        <span>{% trans "Dichiaro di aver letto ed accettato l'informativa sulla" %} 
+                                                <a href="{% url 'privacy' %}" class="privacy" title="Privacy">{% trans "privacy" %} *</a>
+                                        </span>                                                                 
+                                </div> 
+                                <div class="col-xs-12 mg-t-40 text-right">
+                                        <button  type="submit" class="btn-invia-contatti text-right">{% trans "INVIA" %}</button>
+                                </div>                                                          
+                        </div>                                                            
+                        <div class="visible-xs" style="height:200px"></div>                           
+                                <div class="col-md-5 col-md-offset-2">
+                                <div id="google-map">
                                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2953.908209522401!2d14.39202431573886!3d42.23777395080747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1330fdc451199917%3A0x799e1694a9c8b65b!2sVima+Di+Vittorio+Lupinetti+%26+C.+Sas!5e0!3m2!1sit!2sit!4v1494563176605" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-				   </div>                                 
-                         </div>
+				</div>                                 
+                        </div>
                  </div>                
          </div>
  </div>
