--- a/templates/_include/_partial/_social.html
+++ b/templates/_include/_partial/_social.html
@@ -1,6 +1,30 @@
-<a href="https://www.facebook.com/vima.tech.web.solutions/?ref=ts&fref=ts" title="Pagina Facebook" target="_blank">
+{% if contenuto.link_fb %}
+<a href="{{contenuto.link_fb}}" title="Pagina Facebook" target="_blank">
         <i class="fa fa-facebook"></i>                                                                                                                                                   
 </a>
-<a href="https://www.youtube.com/channel/UC7SaLzQQgNFpqsp4UWlu6Rw" title="Pagina Youtube">
+{% endif %}
+{% if contenuto.link_tw %}
+<a href="{{contenuto.link_tw}}" title="Pagina Twitter" target="_blank">
+        <i class="fa fa-twitter"></i>                                                                                                                                                   
+</a>
+{% endif %}
+{% if contenuto.link_ig %}
+<a href="{{contenuto.link_ig}}" title="Pagina Instagram" target="_blank">
+        <i class="fa fa-instagram"></i>                                                                                                                                                   
+</a>
+{% endif %}
+{% if contenuto.link_gp %}
+<a href="{{contenuto.link_gp}}" title="Pagina Google+" target="_blank">
+        <i class="fa fa-google-plus"></i>                                                                                                                                                   
+</a>
+{% endif %}
+{% if contenuto.link_lk %}
+<a href="{{contenuto.link_lk}}" title="Pagina Linkedin" target="_blank">
+        <i class="fa fa-linkedin"></i>                                                                                                                                                   
+</a>
+{% endif %}
+{% if contenuto.link_yt %}
+<a href="{{contenuto.link_yt}}" title="Pagina Youtube">
         <i class="fa fa-youtube-play"></i>                                                                                                                                                   
 </a>
+{% endif %}
