--- a/templates/_include/_footer.html
+++ b/templates/_include/_footer.html
@@ -41,7 +41,7 @@
 	                               {% if contact.provincia %} ({{contact.provincia}}){% endif %} 
 	                               {% if contact.p_iva %} p.iva: {{contact.p_iva}} {% endif %}
 	                               {% if contact.numero_rea %} - rea: {{contact.numero_rea}}{% endif %}
-	                               {% if contact.pec %} | pec: {{contact.pec}} {% else %} {% if contact.email %} {{contact.email}}{%endif%}{%endif%} </p>
+	                               {% if contact.pec %} | pec: {{contact.pec}} {% else %} {% if contact.email %} | mail: {{contact.email}}{%endif%}{%endif%} </p>
 	                </div>
 	        </div>       
 	</div>
