--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,11 +23,11 @@
                         <div class="col-md-5">
                                 <div class="tit">Contatti</div>
                                 <div class="text">
-                                        <p>{{contact.nome_azienda}}</p>
-                                        <p>{{contact.indirizzo_azienda}}, <span>{{contact.civico_azienda}}</span></p>
-                                        <p>{{contact.cap}}<span>{{contact.comune}}</span>(<span>{{contact.provincia}}</span>)</p>
-                                        <p>Tel: {{contact.tel}}</p>
-                                        <p>Mail: {{contact.email}}</p>
+                                        {% if contact.nome_azienda %}<p>{{contact.nome_azienda}}</p>{% endif %}
+                                        {% if contact.indirizzo_azienda %}<p>{{contact.indirizzo_azienda}}{% if contact.civico_azienda %}, <span>{{contact.civico_azienda}}</span>{% endif %}</p>{% endif %}
+                                        {% if contact.cap %}<p>{{contact.cap}}{% if contact.comune %}<span>{{contact.comune}} </span>{% endif %}{% if contact.provincia %}( <span>{{contact.provincia}} </span>){% endif %}</p>{% endif %}
+                                        {% if contact.tel %}<p>Tel: {{contact.tel}}</p>{% endif %}
+                                        {% if contact.email %}<p>Mail: {{contact.email}}</p>{% endif %}
                                 </div>                                
                                 <p class="text-right">Scrivici:</p>				
                                 <div class="col-xs-1 col-xs-offset-1 m-t-25"><input required type="checkbox"></div>
